[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/Hình-nền-background-vector-scaled.jpg" type="Texture" id=1]
[ext_resource path="res://Menu/TarrgetEngravedItalic-G20y.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Menu/Font.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Thumbnail" type="Label" parent="BackGround"]
pause_mode = 2
margin_top = 71.0
margin_right = 480.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 4 )
text = "Dungeon   
   Survival"
align = 1
valign = 3

[node name="Label" type="Label" parent="BackGround"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -175.0
margin_top = 190.0
margin_bottom = -2.0
rect_min_size = Vector2( 175, 0 )
custom_colors/font_color = Color( 0, 1, 0.607843, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Created By"
align = 1

[node name="Label3" type="Label" parent="BackGround"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -175.0
margin_top = 215.0
grow_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Nguyen Duc Huy"
align = 1

[node name="Label4" type="Label" parent="BackGround"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -175.0
margin_top = 240.0
margin_bottom = 5.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Ngo Tuan Manh
"
align = 1

[node name="Menu" type="VBoxContainer" parent="BackGround"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -90.0
margin_right = 120.0

[node name="Start" type="Button" parent="BackGround/Menu"]
margin_right = 95.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../Quit")
custom_colors/font_color_focus = Color( 0, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 5 )
text = "New Game"
flat = true

[node name="Setting" type="Button" parent="BackGround/Menu"]
margin_top = 26.0
margin_right = 95.0
margin_bottom = 48.0
custom_colors/font_color_focus = Color( 0, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 3 )
text = "Setting"
flat = true

[node name="Quit" type="Button" parent="BackGround/Menu"]
margin_top = 52.0
margin_right = 95.0
margin_bottom = 74.0
focus_neighbour_bottom = NodePath("../Start")
custom_colors/font_color_focus = Color( 0, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
text = "Quit"
flat = true

[node name="Setting" type="Control" parent="BackGround"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="BackGround/Setting"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.607843 )

[node name="HBoxContainer" type="HBoxContainer" parent="BackGround/Setting/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -169.0
margin_right = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/Setting/ColorRect/HBoxContainer"]
margin_right = 52.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer"]
margin_right = 52.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 4 )
text = "Master"

[node name="Label2" type="Label" parent="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 52.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Music"

[node name="Label3" type="Label" parent="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 52.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 4 )
text = "Sound"

[node name="VBoxContainer2" type="VBoxContainer" parent="BackGround/Setting/ColorRect/HBoxContainer"]
margin_left = 56.0
margin_right = 206.0
margin_bottom = 169.0
rect_min_size = Vector2( 150, 0 )

[node name="Master" type="HSlider" parent="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer2"]
margin_right = 150.0
margin_bottom = 16.0
step = 10.0

[node name="Music" type="HSlider" parent="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer2"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 36.0
rect_min_size = Vector2( 150, 0 )
step = 10.0

[node name="Sound" type="HSlider" parent="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer2"]
margin_top = 40.0
margin_right = 150.0
margin_bottom = 56.0
step = 10.0

[node name="Back" type="Button" parent="BackGround/Setting/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -52.0
margin_right = 26.0
margin_bottom = -30.0
custom_colors/font_color_focus = Color( 0, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 6 )
text = "Back"
flat = true

[connection signal="pressed" from="BackGround/Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="BackGround/Menu/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="BackGround/Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer2/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer2/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="BackGround/Setting/ColorRect/HBoxContainer/VBoxContainer2/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="pressed" from="BackGround/Setting/ColorRect/Back" to="." method="_on_Back_pressed"]
